samples/_failures_safe/1761448263_39f233_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_83589917.c: In function ‘main’:
./samples/SAFE/__tmp_83589917.c:164:12: error: missing terminating " character
  164 |     printf("Starting state machine simulation\n
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_83589917.c:164:5: error: expected expression at end of input
  164 |     printf("Starting state machine simulation\n
      |     ^~~~~~
./samples/SAFE/__tmp_83589917.c:164:5: error: expected declaration or statement at end of input
